# arm_asm

./: .gitignore  .gitmodules  AGENTS.md  BUILD_SCRIPT_README.md  Makefile  build.bat  build.py  build_simple.bat  gdbinit  gdbinit-py  rule.mk  setenv.bat
main/: AGENTS.md  CMakeLists.txt  Makefile  bd  debug.bat  feature.mk  gdbinit  rule.mk
main/app/: test.c
main/cmake/: feature.cmake  modules.cmake  rules.cmake  toolchain-arm-none-eabi.cmake
main/drivers/: AGENTS.md
main/drivers/CMSIS/Include/: cmsis_gcc.h
main/drivers/bsp/board/mini-stm32/: module.mk
main/drivers/bsp/board/stm32f401re-nucleo/: module.mk
main/drivers/bsp/stepper/: module.mk
main/drivers/chip/lm3s811/: CMakeLists.txt  module.mk
main/drivers/chip/lm3s811/inc/: hal.h  hal_log.h  hal_mpu.h  hal_platform.h
main/drivers/chip/lm3s811/src/: backtrace.c  hal_log.c  hal_mpu.c
main/drivers/chip/stm32f10x/: module.mk
main/drivers/chip/stm32f4xx/: module.mk
main/drivers/chip/stm32f4xx/STM32F4xx_HAL_Driver/: SConscript
main/drivers/chip/stm32l5xx/: module.mk
main/kernel/: AGENTS.md  module.mk
main/kernel/libc/: libc_opt.s  memcpy.c  memcpy.h  memcpy.s  module.mk
main/kernel/rtos/freertos/: module.mk
main/kernel/rtos/freertos/FreeRTOS/: module.mk
main/kernel/service/: CMakeLists.txt  module.mk
main/kernel/service/backtrace/inc/: backtrace.h
main/kernel/service/backtrace/src/: backtrace.c
main/kernel/service/exception/: module.mk
main/kernel/service/exception/config/: cmb_cfg.h
main/kernel/service/exception/inc/: exception.h  exception_dump_table.h
main/kernel/service/exception/src/: example.c  exception.c  exception.s  exception_handler.c
main/kernel/service/hybribus/: module.mk
main/kernel/service/hybribus/inc/: hybribus.h
main/kernel/service/hybribus/src/: hybribus.c  hybribus_test.c
main/kernel/service/lite_printf/: hexdump.h  lite_printf.c  lite_printf.h
main/kernel/service/rtos/: bitmap.c  bitmap.h  event.c  event.h  event_group.c  event_group.h  list.c  list.h  mbox.c  mbox.h  memblock.c  memblock.h  mutex.c  mutex.h  os.h  osstart.s  ostimer.c  ostimer.h  sem.c  sem.h  switch.c  task.c  task.h  task_main.c  time.c
main/kernel/service/serial_cmd/: module.mk
main/kernel/service/serial_cmd/src/: serial_protocol.c
main/kernel/service/shell/inc/: shell.h
main/kernel/service/shell/src/: shell.c
main/kernel/service/stp/: readme.md  stp.c  stp.h
main/kernel/service/superbus/: module.mk
main/kernel/service/superbus/inc/: spim_config.h  spim_gpio.h  superbus.h  sw_spi_master.h  sw_spi_slave.h
main/kernel/service/superbus/src/: spim_gpio.c  superbus.c  sw_spi_master.c  sw_spi_slave.c  test.c
main/kernel/service/syslog/inc/: serial.h  syslog.h
main/kernel/service/syslog/src/: syslog.c
main/kernel/third/memfault/: memfault_metrics_heartbeat_config.def  memfault_platform_port.c  module.mk
main/kernel/third/unit-test/: Makefile  module.mk
main/middleware/: AGENTS.md  module.mk
main/middleware/fifo/: Makefile  fifo  fifo.c  fifo.h  module.mk  test.c
main/middleware/mbuf/: mbuf.c  mbuf.h
main/middleware/menu/: Makefile  dlist.h  list.h  menu  menu.c  menu.h  module.mk  slist.h  test.c
main/middleware/mpool/: mpool.c  mpool.h
main/middleware/mt_ringbuffer/: Makefile  mt_ringbuffer.c  mt_ringbuffer.h  rbtest  test.c
main/middleware/multi_core_sim/: Makefile  build.sh  env.bat  mc  mc.c  mca  mcb  ser1.py  ser2.py  ser_bridge.c  ser_bridge.h  serial.c  serial.h  sim_uart.c  sim_uart.h  test_cpu_cores.c
main/middleware/ringbuffer/: Makefile  module.mk  ringbuffer  ringbuffer.c  ringbuffer.h  test.c
main/middleware/serial_cmd/: module.mk
main/middleware/serial_cmd/inc/: serial_protocol.h
main/middleware/serial_cmd/inc/modules/: cmd_memory.h  cmd_stepper.h
main/middleware/serial_cmd/src/: serial_protocol.c
main/middleware/serial_cmd/src/modules/: cmd_led.c  cmd_memory.c  cmd_stepper.c  cmd_system.c
main/middleware/utility/: module.mk
main/middleware/utility/inc/: checksum.h  macro.h
main/middleware/utility/src/: crc16.c  crc32.c  crc8.c
main/project/: AGENTS.md
main/project/lm3s811/main/: CMakeLists.txt  hal.h  serial.h  test.c
main/project/lm3s811/main/GCC/: Makefile  debug.bat  feature.mk  gdbinit  gdbinit-py  gdbinit.py  test.ld  test.s
main/project/stm32f10x/dc-uart/: CMakeLists.txt
main/project/stm32f10x/dc-uart/GCC/: Makefile  debug.bat  feature.mk
main/project/stm32f10x/dc-uart/inc/: hal.h  hal_platform.h  main.h  serial.h  stm32f1xx_hal_conf.h
main/project/stm32f10x/dc-uart/src/: main.c  serial.c
main/project/stm32f4xx/FreeRTOS_demo/: CMakeLists.txt
main/project/stm32f4xx/FreeRTOS_demo/GCC/: Makefile  debug.bat  dl.bat  feature.mk  gdbinit  nucleo.ld  start.bat  startup_stm32f401xe.s
main/project/stm32f4xx/FreeRTOS_demo/inc/: FreeRTOSConfig.h  hal.h  main.h  serial.h  stepper_motor.h  uart_dma.h
main/project/stm32f4xx/FreeRTOS_demo/src/: main.c  serial.c  stepper_motor.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
main/project/stm32f4xx/NetduinoPlus2/: CMakeLists.txt
main/project/stm32f4xx/NetduinoPlus2-qemu/GCC/: Makefile  STM32F405RGTx_FLASH.ld  debug.bat  debug.py  feature.mk  gdbinit  gdbinit-py  startup_stm32f405xx.s
main/project/stm32f4xx/NetduinoPlus2-qemu/inc/: hal.h  hal_platform.h  main.h
main/project/stm32f4xx/NetduinoPlus2-qemu/src/: main.c  serial.c  stm32f4xx_hal_msp.c  (+1 more)
main/project/stm32f4xx/main/: CMakeLists.txt
main/project/stm32l5xx/main/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  gdbinit  gdbinit-py  rule.mk
test/arithmetic/: CMakeLists.txt  Makefile  debug.bat  test.s
test/branch/: CMakeLists.txt  Makefile  debug.bat  gdbinit  gdbinit-py  test.s
test/cm33/: CMakeLists.txt  Makefile  debug.bat  test.ld  test.s
test/cm4/: CMakeLists.txt  Makefile  debug.bat  start.s  test.c  test.ld  test.s
test/cmake/: toolchain-arm-none-eabi.cmake
test/it/: CMakeLists.txt  Makefile  test.s
test/mov/: CMakeLists.txt  Makefile  debug.bat  test.map  test.s
test/stm/: CMakeLists.txt  test.s
test/template/: CMakeLists.txt  Makefile  debug.bat  main.c  test.c  test.ld  test.s
(+324 files in other folders)
